acrescentado readme , feito a padronização de retornos da api